# Calc

./: .gitignore  CMakeLists.txt
Calculator/: Main.cpp
Calculator/API/: API.cpp  API.h  ExpressionElements.cpp  ExpressionElements.h
Calculator/BaseOperations/: BaseOperation.cpp  BaseOperation.h
Calculator/Calc/: Calculator.cpp  Calculator.h
Calculator/ModuleManager/: ModuleManager.cpp  ModuleManager.h
Calculator/Separator/: Separator.cpp  Separator.h
Modules/Logarifms/: logarifms.cpp  logarifms.h
Modules/Pow/: pow.cpp  pow.h
Modules/Trigonometry/: trigonometry.cpp  trigonometry.h
